Se Agrego el Algoritmo KNN y grafica

--- a/src/app/pages/datos/datos.component.html
+++ b/src/app/pages/datos/datos.component.html
@@ -11,8 +11,7 @@
             <div class="blog-slider__content">
                 <span class="blog-slider__code">Descarga un Archivo Excel</span>
                 <div class="blog-slider__title">Respuestas del Formulario</div>
-                <div class="blog-slider__text">En este apartado podrás descargar todas las respuestas obtenidas en el
-                    formulario de la sección anterior.</div>
+                <div class="blog-slider__text">En este apartado podrás descargar respuestas de datos de la base de datos listas para clasificar.</div>
                 <button (click)="descargarExcel()" class="blog-slider__button">Descargar</button>
                 <button (click)="obtenerDatos()" class="blog-slider__button">Verificar Datos</button>
             </div>
