--- a/src/app/components/algoritmos/knn/knn.component.css
+++ b/src/app/components/algoritmos/knn/knn.component.css
@@ -12,3 +12,22 @@
   font-size: 1.2rem;
   font-weight: bold;
 }
+
+.mt-3 {
+  margin-top: 1rem;
+}
+
+.mt-4 {
+  margin-top: 2rem;
+}
+
+/* Estilo adicional para el label de clasificación resultante */
+.form-label {
+  font-weight: bold;
+}
+
+.alert-info {
+  background-color: #d1ecf1;
+  border-color: #bee5eb;
+  color: #0c5460;
+}
