--- a/src/app/components/algoritmos/knn/knn.component.html
+++ b/src/app/components/algoritmos/knn/knn.component.html
@@ -8,10 +8,26 @@
         Realizar la Clasificación
     </button>
 
-    <div *ngIf="classificationResult" class="mt-4">
-        <h3 class="mb-3">Clasificación Resultante:</h3>
-        <div class="alert alert-info">
+    <div class="mt-3">
+        <label class="form-label">Clasificación Resultante:</label>
+        <div class="alert alert-info" *ngIf="classificationResult">
             {{ classificationResult }}
         </div>
     </div>
+
+    <div class="mt-4">
+        <h3 class="mb-3">Gráfico de Clasificación KNN</h3>
+        <canvas id="scatterChart"></canvas>
+    </div>
+
+    <button (click)="downloadPDF()" [disabled]="!scatterChart" class="btn btn-secondary mt-3">
+        Descargar Gráfico
+    </button>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
