--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -6,6 +6,7 @@
           <li class="active"> <a (click)="navigateTo('inicio')">Inicio</a> </li>
           <li class="active"> <a (click)="navigateTo('formulario')">Formulario</a> </li>
           <li class="active"> <a (click)="navigateTo('knn')">KNN</a> </li>
+          <li class="active"> <a (click)="navigateTo('kmeans')">KMeans</a> </li>
         </ul>
       </nav>
     </div>
