--- a/src/app/components/algoritmos/knn/knn.component.html
+++ b/src/app/components/algoritmos/knn/knn.component.html
@@ -6,18 +6,18 @@
     </div>
 
     <button (click)="clasificar()" [disabled]="!file" class="btn btn-primary">
-        Realizar la Clasificación
+        Realizar la Clasificación por el Algoritmo KNN
     </button>
 
     <div class="mt-3">
-        <label class="form-label">Clasificación Resultante:</label>
+        <label class="form-label">Clasificación Resultante al Vecino más Cercano:</label>
         <div class="alert alert-info" *ngIf="classificationResult">
             {{ classificationResult }}
         </div>
     </div>
-
+    
     <div class="mt-4">
-        <h3 class="mb-3">Gráfico de Clasificación KNN</h3>
+        <!--<h3 class="mb-3">Gráfico de Clasificación KNN</h3>-->
         <canvas id="scatterChart"></canvas>
     </div>
 
