--- a/src/app/pages/datos/datos.component.css
+++ b/src/app/pages/datos/datos.component.css
@@ -75,18 +75,14 @@ body {
   line-height: 1.5em;
 }
 
-.blog-slider__button {
+.custom-checkbox {
   display: inline-flex;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  padding: 15px 35px;
-  border-radius: 50px;
-  color: #fff;
-  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
-  text-decoration: none;
-  font-weight: 500;
-  justify-content: center;
-  text-align: center;
-  letter-spacing: 1px;
+  align-items: center;
+}
+
+.button-group {
+  display: flex;
+  gap: 10px;
 }
 
 .blog-slider__pagination {
