--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -7,6 +7,9 @@
           <li class="active"> <a (click)="navigateTo('formulario')">Formulario</a> </li>
           <li class="active"> <a (click)="navigateTo('knn')">KNN</a> </li>
           <li class="active"> <a (click)="navigateTo('kmeans')">KMeans</a> </li>
+
+          <li class="active"> <a (click)="navigateTo('kmeansmodel')">Entrenar modelo</a> </li>
+
         </ul>
       </nav>
     </div>
